--- a/templates/login.html
+++ b/templates/login.html
@@ -1,168 +1,136 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
+<head>
 
-        <title>Phone Catalog</title>
+  <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
+   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
+  </script>
 
-        <!-- Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,700" rel="stylesheet">
-        <!-- Bootstrap CSS -->
-        <link href="{{url_for('static', filename='../static/css/bootstrap.min.css')}}" rel="stylesheet">
-        <!-- Custom CSS -->
-        <link href="{{url_for('static', filename='../static/css/style.css')}}" rel="stylesheet">
+<script src="//apis.google.com/js/platform.js?onload=start"> </script>
 
-        <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <script src="//apis.google.com/js/platform.js?onload=start"> </script>
-
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg top-menu">
-            <div class="container">
-                <div class="col-md-8">
-                    <a class="navbar-brand logo" href="{{ url_for('main') }}">Phone Catalog</a>
-                </div>
-                <div class="col-md-4 text-right">
-                    <button type="button" class="btn btn-primary btn-lg login-btn">Login</button>
-                </div>
-            </div>
-        </nav>
-        <div class="container main-content text-center">
-            <div class="col-md-12 categories">
-                {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                    {% for message in messages %}
-                        <strong> {{ message }} </strong>
-                    {% endfor %}
-                {% endif %}
-                {% endwith %}
-                
-                <!-- GOOGLE PLUS SIGN IN-->
-
-          
-                    <div id="signInButton">
-                    <span class="g-signin"
-                        data-scope="openid email"
-                        data-clientid="397318971407-i7a464pg08hstg3o0bgd65h0e11sl9ft.apps.googleusercontent.com"
-                        data-redirecturi="postmessage"
-                        data-accesstype="offline"
-                        data-cookiepolicy="single_host_origin"
-                        data-callback="signInCallback"
-                        data-approvalprompt="force">
-                    </span>
-                    </div>
-
-            <div id="result"></div>
-
-            <script>
-            function signInCallback(authResult) {
-            if (authResult['code']) {
-
-                // Hide the sign-in button now that the user is authorized
-                $('#signinButton').attr('style', 'display: none');
-
-                // Send the one-time-use code to the server, if the server responds, write a 'login successful' message to the web page and then redirect back to the main catalog page
-                $.ajax({
-                type: 'POST',
-                url: '/gconnect?state={{STATE}}',
-                processData: false,
-                data: authResult['code'],
-                contentType: 'application/octet-stream; charset=utf-8',
-                success: function(result) {
-                    // Handle or verify the server response if necessary.
-                    if (result) {
-                    $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
-                    setTimeout(function() {
-                    window.location.href = "/catalog";
-                    }, 4000);
-                    
-
-                } else if (authResult['error']) {
-
-                console.log('There was an error: ' + authResult['error']);
-            } else {
-                    $('#result').html('Failed to make a server-side call. Check your configuration and console.');
-                    }
-
-                }
-                
-            }); } }
-            </script>
+<!-- END PRE-REQUISITES FOR GOOGLE SIGN IN -->
 
 
-
-            <!--END GOOGLE PLUS SIGN IN -->
-
-            <!--FACEBOOK SIGN IN -->
-            <script>
-            window.fbAsyncInit = function() {
-            FB.init({
-                appId      : '1947688498830504',
-                cookie     : true,  // enable cookies to allow the server to access 
-                                    // the session
-                xfbml      : true,  // parse social plugins on this page
-                version    : 'v2.8' // use version 2.8
-            });
-
-            };
-
-            // Load the SDK asynchronously
-            (function(d, s, id) {
-                var js, fjs = d.getElementsByTagName(s)[0];
-                if (d.getElementById(id)) return;
-                js = d.createElement(s); js.id = id;
-                js.src = "//connect.facebook.net/en_US/sdk.js";
-                fjs.parentNode.insertBefore(js, fjs);
-            }(document, 'script', 'facebook-jssdk'));
-
-            // Here we run a very simple test of the Graph API after login is
-            // successful.  See statusChangeCallback() for when this call is made.
-            function sendTokenToServer() {
-                var access_token = FB.getAuthResponse()['accessToken'];
-                console.log(access_token)
-                console.log('Welcome!  Fetching your information.... ');
-                FB.api('/me', function(response) {
-                console.log('Successful login for: ' + response.name);
-                $.ajax({
-                type: 'POST',
-                url: '/fbconnect?state={{STATE}}',
-                processData: false,
-                data: access_token,
-                contentType: 'application/octet-stream; charset=utf-8',
-                success: function(result) {
-                    // Handle or verify the server response if necessary.
-                    if (result) {
-                    $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
-                    setTimeout(function() {
-                    window.location.href = "/catalog";
-                    }, 4000);
-                    
-
-                } else {
-                    $('#result').html('Failed to make a server-side call. Check your configuration and console.');
-                    }
-
-                }
-                
-            });
+</head>
 
 
-                });
-            }
-            </script>
+<body>
 
-            <button>
-                <fb:login-button scope="public_profile,email" onlogin="sendTokenToServer();">
-                <a href='javascript:sendTokenToServer()'>Login with Facebook</a>
-                </fb:login-button>
-            </button>
-            <!--END FACEBOOK SIGN IN -->
 
-            </div>
+<!-- GOOGLE PLUS SIGN IN-->
+
+
+          <div id="signinButton">
+          <span class="g-signin"
+            data-scope="openid email"
+            data-clientid="11010107052-vbclk01pda9beneni62dnj1556t3av24.apps.googleusercontent.com"
+            data-redirecturi="postmessage"
+            data-accesstype="offline"
+            data-cookiepolicy="single_host_origin"
+            data-callback="signInCallback"
+            data-approvalprompt="force">
+          </span>
         </div>
-    </body>
-</html>
+
+<div id="result"></div>
+
+<script>
+function signInCallback(authResult) {
+  if (authResult['code']) {
+
+    // Hide the sign-in button now that the user is authorized
+    $('#signinButton').attr('style', 'display: none');
+
+    // Send the one-time-use code to the server, if the server responds, write a 'login successful' message to the web page and then redirect back to the main restaurants page
+    $.ajax({
+      type: 'POST',
+      url: '/gconnect?state={{STATE}}',
+      processData: false,
+      data: authResult['code'],
+      contentType: 'application/octet-stream; charset=utf-8',
+      success: function(result) {
+        // Handle or verify the server response if necessary.
+        if (result) {
+          $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
+         setTimeout(function() {
+          window.location.href = "/restaurant";
+         }, 4000);
+
+
+      } else if (authResult['error']) {
+
+    console.log('There was an error: ' + authResult['error']);
+  } else {
+        $('#result').html('Failed to make a server-side call. Check your configuration and console.');
+         }
+
+      }
+
+  }); } }
+</script>
+
+
+
+<!--END GOOGLE PLUS SIGN IN -->
+
+<!--FACEBOOK SIGN IN -->
+<script>
+  window.fbAsyncInit = function() {
+  FB.init({
+    appId      : 'PASTE_YOUR_APP_ID_HERE',
+    cookie     : true,  // enable cookies to allow the server to access
+                        // the session
+    xfbml      : true,  // parse social plugins on this page
+    version    : 'v2.8' // use version 2.8
+  });
+
+  };
+
+  // Load the SDK asynchronously
+  (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/sdk.js";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+
+  // Here we run a very simple test of the Graph API after login is
+  // successful.  See statusChangeCallback() for when this call is made.
+  function sendTokenToServer() {
+    var access_token = FB.getAuthResponse()['accessToken'];
+    console.log(access_token)
+    console.log('Welcome!  Fetching your information.... ');
+    FB.api('/me', function(response) {
+      console.log('Successful login for: ' + response.name);
+     $.ajax({
+      type: 'POST',
+      url: '/fbconnect?state={{STATE}}',
+      processData: false,
+      data: access_token,
+      contentType: 'application/octet-stream; charset=utf-8',
+      success: function(result) {
+        // Handle or verify the server response if necessary.
+        if (result) {
+          $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
+         setTimeout(function() {
+          window.location.href = "/restaurant";
+         }, 4000);
+
+
+      } else {
+        $('#result').html('Failed to make a server-side call. Check your configuration and console.');
+         }
+
+      }
+
+  });
+
+
+    });
+  }
+</script>
+
+<!--END FACEBOOK SIGN IN -->
+
+  </body>
+
+  </html>
